[package]
name = "bevy_run_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
rand = "0.8"
bevy-inspector-egui = { version = "0.9", optional = true }

[features]
default = []
debug = ["bevy-inspector-egui"]